odd overflow issue;built

--- a/site/v1/src/sass/style.scss
+++ b/site/v1/src/sass/style.scss
@@ -53,6 +53,7 @@ $AH: adjust-color($A,$alpha:-0.5);
 body{width:100%;height:100%;
   // color:$dv-copy;
   font-family: $font-body;
+  overflow:auto;
   // background-color:$dv-black;
 }
 
